--- a/todonm-client/src/App.css
+++ b/todonm-client/src/App.css
@@ -1,5 +1,12 @@
 .App {
+  padding: 16px;
   width: 100%;
   max-width: 800px;
   height: 100%;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Do Hyeon', 'sans-serif';
+  font-size: 4.5rem;
 }
