--- a/todonm-client/src/components/Todolist.css
+++ b/todonm-client/src/components/Todolist.css
@@ -1,3 +1,12 @@
 Button.createTodoBtn {
+    position: absolute;
+    left: 50%;
+    bottom: 16px;
+    max-width: 60px;
+    max-height: 60px;
+    width: 100%;
+    height: 100%;
+    font-size: 200%;
     text-align: center;
+    border-radius: 50%;
 }
