--- a/todonm-client/src/App.css
+++ b/todonm-client/src/App.css
@@ -1,5 +1,12 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  min-width: 500px !important;
+  min-height: 650px !important;
+  overflow: hidden;
+}
+
 .App {
-  padding: 16px;
   width: 100%;
   max-width: 800px;
   height: 100%;
@@ -9,4 +16,11 @@ h1 {
   text-align: center;
   font-family: 'Do Hyeon', 'sans-serif';
   font-size: 4.5rem;
+}
+
+.container {
+  width: 100%;
+  height: 72vh;
+  min-height: 430px;
+  overflow-y: overlay;
 }
