--- a/todonm-client/src/components/TodoItem.css
+++ b/todonm-client/src/components/TodoItem.css
@@ -7,7 +7,7 @@
     font-weight: bold;
 }
 
-.item-header > .text-muted {
+.item-header > .text-muted, .item-header > .text-danger{
     margin-left: 12px;
     font-size: 80%;
 }
